タイプミスを修正

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <p>
         <h1>THREE.js</h1>
-        <a href="icd/ics.html">Boxアニメーション</a></br>
+        <a href="ics/ics.html">Boxアニメーション</a></br>
         <a href="PLATEAU/PLATEAU.html">PLATEAUの表示</a></br>
     </p>
 </body>
