--- a/ics/ics.html
+++ b/ics/ics.html
@@ -11,6 +11,12 @@
         </script>
         <script type="module" src="ics.js"></script>
     </head>
+    <header>
+        <a href="../">Back</a>
+    </header>
     <body>
-        <canvas id="myCanVas"></canvas>    </body>
+        <div>
+            <canvas id="myCanVas"></canvas>
+        </div>
+    </body>
 </html>
