--- a/PLATEAU/PLATEAU.html
+++ b/PLATEAU/PLATEAU.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html> 
 <html> 
-  <body> 
+  <header>
+    <a href="../">Back</a>
+  </header>
+  <body>
     <!-- Three.js本体とGLTFローダー --> 
     <script type="importmap">
     {
