コンテンツ2つ追加

--- a/contents/first_box.html
+++ b/contents/first_box.html
@@ -9,7 +9,7 @@
                 }
             }
         </script>
-        <script type="module" src="ics.js"></script>
+        <script type="module" src="../js/first_box.js"></script>
     </head>
     <header>
         <a href="../">Back</a>
