--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <body>
     <p>
         <h1>THREE.js</h1>
-        <a href="ics/ics.html">Boxアニメーション</a></br>
+        <a href="contents/first_box.html">Boxアニメーション</a></br>
+        <a href="contents/box.html">Boxアニメーション2</a></br>
+        <a href="contents/material.html">地球儀</a></br>
         <a href="PLATEAU/PLATEAU.html">PLATEAUの表示</a></br>
     </p>
 </body>
